--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: ppbm
-Title: Protein-Protein Binding Models
-Version: 0.0.0.9000
+Package: pbm
+Title: Protein Binding Models
+Version: 1.0.0
 Authors@R: person("Jonathan", "Davies", email = "jd769@bath.ac.uk", role = c("aut", "cre"))
-Description: Something.
+Description: Binding models which are useful when analysing protein-ligand interactions by techniques such as Biolayer Interferometry (BLI) or Surface Plasmon Resonance (SPR), it is useful to simulate binding curves to help optimise your experiments. After initial binding parameters are known, binding curves can be simulated and paramteters can be varied. The models within this package may also be used to fit a curve to measured binding data using non-linear regression.
 Depends: R (>= 3.4.2)
 License: MIT + file LICENSE
 Encoding: UTF-8
