--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pbm
 Title: Protein Binding Models
-Version: 1.1.0
-Authors@R: person("Jonathan", "Davies", email = "jd769@bath.ac.uk", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4986-8594"))
+Version: 1.2.0
+Authors@R: person("Jonathan", "Davies", email = "jonathanrd@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4986-8594"))
 Description: Binding models which are useful when analysing protein-ligand interactions by techniques such as Biolayer Interferometry (BLI) or Surface Plasmon Resonance (SPR). Naman B. Shah, Thomas M. Duncan (2014) <doi:10.3791/51383>. Hoang H. Nguyen et al. (2015) <doi:10.3390/s150510481>. After initial binding parameters are known, binding curves can be simulated and parameters can be varied. The models within this package may also be used to fit a curve to measured binding data using non-linear regression.
 Depends: R (>= 3.4.0)
 License: MIT + file LICENSE
@@ -9,7 +9,7 @@ Encoding: UTF-8
 URL: https://github.com/jonathanrd/pbm
 BugReports: https://github.com/jonathanrd/pbm/issues
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 7.1.1.9001
 Suggests: testthat,
     knitr,
     rmarkdown,
